--- a/public/css/front.css
+++ b/public/css/front.css
@@ -1,10 +1,11 @@
-/*!
+@import url(https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner:wght@400;
+
+500;700&family=Nunito:wght@400;500;700&display=swap);/*!
  * Bootstrap Grid v4.6.1 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
-
 html {
   box-sizing: border-box;
   -ms-overflow-style: scrollbar;
@@ -4291,5 +4292,22 @@ html {
   .mx-xl-auto {
     margin-left: auto !important;
   }
+}
+
+body {
+  font-family: "Nunito", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Edu VIC WA NT Beginner", cursive;
+}
+
+:root {
+  --bg-section-light: #efefef;
 }
 
